--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "local": "next build && serve out"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
@@ -26,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
+    "serve": "^14.2.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
