--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.5",
+    "@vercel/analytics": "^1.1.1",
     "csv": "^6.3.5",
     "next": "14.0.3",
     "next-usequerystate": "^1.13.0",
