--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@vercel/speed-insights": "^1.0.14",
     "csv": "^6.3.10",
     "next": "14.2.10",
-    "next-usequerystate": "^1.20.0",
+    "nuqs": "^2.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.5.0"
