--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "local": "next build && serve out"
+    "local": "next build && next start"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
@@ -29,7 +29,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
-    "serve": "^14.2.4",
     "tailwindcss": "^3.4.14",
     "typescript": "^5"
   },
