--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": [
     "eslint:recommended",
     "next/core-web-vitals",
-    "next/typescript"
+    "next/typescript",
+    "prettier"
   ]
 }
