--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "local": "next build && next start"
+    "lint:fix": "next lint --fix",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "local": "next build && next start",
+    "prepare": "husky"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
@@ -28,7 +32,11 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "eslint-config-next": "15.0.2",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "postcss": "^8",
+    "prettier": "3.3.3",
     "tailwindcss": "^3.4.14",
     "typescript": "^5"
   },
